# terminator-tree-topper

./: .devcontainer.json  .gitignore  Cargo.toml  build.rs  offshape.toml
.cargo/: config.toml
assets/: eyeball.3mf  eyeball.stl  led_plug.stl  offshape.toml  pupil_cover.3mf  t800_skull.3mf  tree coupling.3mf
assets/reference/: curve of eye visible.avif
assets/stl/: camera_arm_left.stl  camera_arm_right.stl  camera_enclosure_left.stl  camera_enclosure_right.stl  eye_diffuser_left.stl  eye_diffuser_right.stl  eyeball.stl  eyeball_base_left.stl  eyeball_base_right.stl  eyeball_left.stl  eyeball_right.stl  eyes.3mf  led_plug.stl  pan_motor_base.stl  pan_motor_plate.stl  shaft.stl  skull_adapter.stl  skull_adapter_plug.stl  socket_connection_left_eye.stl  socket_connection_right_eye.stl  socket_connection_tester.stl  spring_carrier_motor.stl  spring_carrier_skull.stl  tree coupling.3mf  tree_topper_base.stl  tree_topper_helix.stl
examples/: a440_dac.rs  blinky.rs  button_dac.rs  cam_movement.rs  cam_tester.rs  eyes_test.rs  notes_dac.rs  pwm.rs  sam.rs  sam_dac.rs  stepper_control_core.rs  stepper_homing.rs
src/: _global_alloc.rs  debug.rs  gpio.rs  lib.rs  main.rs  stream.rs
src/camera/: mod.rs
src/camera/hm0360/: error.rs  init.rs  mod.rs  read_image.pio  reg.rs
src/dac/: ad5626.pio  ad5626.rs  mod.rs
src/dac/ad5626/: ad5626.pio  mod.rs
src/dac/mcp4725/: mod.rs
src/led/ws2812/: brightness.rs  mod.rs  ws2812.pio
src/stepper/: error.rs  mod.rs  motor_constants.rs  ramp_generator.rs  tune.rs  uart.rs
src/stepper/tmc2209/: error.rs  mod.rs  motion.rs  tune.rs  uart.rs
src/time/: ticker.rs
src/uart/: bus.rs
src/ws2812/: gamma.rs  mod.rs
tests/: scratch.rs
