[package]
name = "t800"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = {package = "embassy-embedded-hal", features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "76f3a11"}
embassy-sync = {package = "embassy-sync", features = ["defmt"], git = "https://github.com/embassy-rs/embassy", rev = "76f3a11"}
embassy-executor = {package = "embassy-executor", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "nightly"], git = "https://github.com/embassy-rs/embassy", rev = "76f3a11"}
embassy-rp = {package = "embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"], git = "https://github.com/embassy-rs/embassy", rev = "76f3a11"}
embassy-time = {package = "embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"], git = "https://github.com/embassy-rs/embassy", rev = "76f3a11"}

anyhow = { version = "1.0", default-features = false }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
fixed = "1.23.1"
fixed-macro = "1.2"
micromath = "2.1.0"
pio = "0.2.1"
pio-proc = "0.2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
rgb = {version = "0.8", features = ["as-bytes", "grb"]}
spin = {version = "0.9.8", default-features = false, features = ["lock_api", "portable_atomic", "spin_mutex"]}
static_cell = { version = "2", features = ["nightly"]}
talc = "3.1.1"
tmc2209 = "0.2.2"
