[package]
name = "t800"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[[bin]]
name = "main"
path = "src/main.rs"
harness = false

[[test]]
name = "scratch"
harness = false

[dependencies]
embassy-embedded-hal = {package = "embassy-embedded-hal", features = ["defmt"], git = "https://github.com/shyndman/embassy", rev = "76f3a11"}
embassy-executor = {package = "embassy-executor", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "nightly"], git = "https://github.com/shyndman/embassy", rev = "76f3a11"}
embassy-futures = {package = "embassy-futures", git = "https://github.com/shyndman/embassy", rev = "76f3a11"}
embassy-rp = {package = "embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl", "intrinsics", "rom-func-cache"], git = "https://github.com/shyndman/embassy", rev = "76f3a11"}
embassy-sync = {package = "embassy-sync", features = ["defmt"], git = "https://github.com/shyndman/embassy", rev = "76f3a11"}
embassy-time = {package = "embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"], git = "https://github.com/shyndman/embassy", rev = "76f3a11"}

anyhow = { version = "1.0", default-features = false }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

dasp = { package = "dasp", default-features = false, features = ["all-no-std"], git = "https://github.com/shyndman/dasp", rev = "66e7e1a9200c93d3ce1242efce3fb112c3eef7d6"}
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
fixed = "1.24.0"
fixed-macro = "1.2"
futures = {version = "0.3.28", default-features = false}
futures-util = { version = "0.3.29", default-features = false, features = ["async-await", "futures-macro", "unstable"] }
micromath = "2.1.0"
pio = "0.2.1"
pio-proc = "0.2"
portable-atomic = { version = "1.6", features = ["critical-section"] }
rand = {version = "0.8.5", default-features = false, features = [ "alloc", "nightly", "small_rng", ]}
rgb = {version = "0.8", features = ["as-bytes", "grb"]}
rustsam = {package = "rustsam", path = "/home/shyndman/dev/github.com/rustsam/"}
spin = {version = "0.9.8", default-features = false, features = ["lock_api", "portable_atomic", "spin_mutex"]}
static_cell = { version = "2", features = ["nightly"]}
talc = "3.1.1"
tmc2209 = "0.2.2"

[dev-dependencies]
defmt-test = "0.3.1"
